<resources>
    <string name="app_name">Trivia</string>
    <string name="title_text">Trivia</string>
    <string name="out_of_text">Question 45/89</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="next_button" >Next</string>
    <string name="placeholder">This is where are going to be adding all the text or all the questions however you it! haha</string>
    <string name="correct_answer">Correct</string>
    <string name="incorrect_answer">Incorrect</string>
    <string name="question_no">Question No</string>
    <string name="highest_score">Highest Score</string>
</resources>